# CityRadiation-Accelerator-CRAX-V1.0

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.txt  arrow_build.bat  build.bat  build.sh  build_macos.sh
common/: CMakeLists.txt  build.bat  build.sh
common/include/: arrow_env.h  base.h  bg_.h  concave.h  config.h  const_.h  eigen_.h  env_.h  gen_phd.h  log.h  rad_func.h  shadow.h  str_func.h  tp.h
common/src/: base.cc  config.cc  shadow.cc
mesh/: CMakeLists.txt  main.cc
rad/: CMakeLists.txt  main.cc
