include_directories(./)
file(GLOB_RECURSE CODELIST "${PROJECT_SOURCE_DIR}/rad/*.cc" "${PROJECT_SOURCE_DIR}/rad/*.h")
source_group("" FILES ${CODELIST})
#set(CMAKE_EXE_LINKER_FLAGS " -static")
#link_directories(${Libs})
#set(LinkLib common)
if(MSVC)
	link_directories(${Libs})
	set(LinkLib PRIVATE arrow common)
else()
	find_package(Arrow REQUIRED)
	link_directories(${Libs})
	set(LinkLib PRIVATE Arrow::arrow_shared common)
endif(MSVC)

SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${Bin})
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${Bin})

add_executable(radiation ${CODELIST})
target_link_libraries(radiation ${LinkLib} -static-libgcc -static-libstdc++)
